src/objects/Account_Address__c.object
<CustomObject>
    <description>Junction object to tie multiple address records to an account and multiple accounts to a single address record.</description>
    <fields>
        <fullName>Account_Address_ETL_ID__c</fullName>
        <formula>if( Account__r.Rep_Office_ID__c &lt;&gt; &quot;&quot;, Account__r.Rep_Office_ID__c,  Account__r.Warehouse_ID__c ) &amp; &quot;-&quot; &amp; Address__r.Warehouse_Id__c</formula>
        <label>Account-Address ETL ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Address_ID__c</fullName>
        <description>For purpose of restricting duplicates via trigger.</description>
        <label>Account Address ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Addresses</relationshipLabel>
        <relationshipName>Account_Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Name__c</fullName>
        <formula>Address__r.Address_Name__c</formula>
        <label>Address Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Address Lookup</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Account_Addresses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bill To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DCW_Active_Address__c</fullName>
        <description>This is populated on the address object from the DCW ETL integration</description>
        <formula>Address__r.DCW_Active_Address__c</formula>
        <inlineHelpText>If this is checked the DCW Address is Active</inlineHelpText>
        <label>DCW Active Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ETL_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>ETL External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linked_Address__c</fullName>
        <formula>IF(LEN(Address__r.Address_Line_1__c)&gt;0,Address__r.Address_Line_1__c &amp; BR(),&quot;&quot;)  &amp;
IF(LEN(Address__r.Address_Line_2__c)&gt;0,Address__r.Address_Line_2__c &amp; BR(),&quot;&quot;)  &amp;
IF(LEN(Address__r.Address_Line_3__c)&gt;0,Address__r.Address_Line_3__c &amp; BR(),&quot;&quot;)  &amp;
IF(LEN(Address__r.Address_Line_4__c)&gt;0,Address__r.Address_Line_4__c &amp; BR(),&quot;&quot;)  &amp;
Address__r.City__c &amp; 
If(LEN(Address__r.City__c)&gt;0 &amp;&amp; LEN(Text(Address__r.State_Province__c))&gt;0,&quot;, &quot;,&quot;&quot;) &amp;
Text(Address__r.State_Province__c) &amp; 
IF(LEN(Address__r.Postal_Code__c)&gt;0,&quot; &quot; &amp; Address__r.Postal_Code__c,&quot;&quot;) &amp;
If(LEN(Text(Address__r.Country__c))&gt;0,BR() &amp; Text(Address__r.Country__c),&quot;&quot;)</formula>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_To__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mail To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Physical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Physical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Bill_To__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Bill To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Mail_To__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Mail To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Ship_To__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Ship To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ship To</label>
        <type>Checkbox</type>
    </fields>
    <label>Account Address</label>
    <nameField>
        <displayFormat>AA-{000000000}</displayFormat>
        <label>Account Address ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>